# CMakeExample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cmake_example/: Header.hpp  Source.cpp
tests/: CMakeLists.txt  test_foo.cpp
